tests/errors/compiler/repeated_decl/int_void.c
int main()
{
	int a = 10;
	int a = 1;	
	return 0;
}